--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "lint": "eslint .",
     "preview": "vite preview"
   },
